# IN424_ProjectROS

./: README.md  install_dependencies.sh  install_galactic.sh
in424_desc/: CMakeLists.txt  package.xml
in424_desc/xacro/: macro.xacro  materials.xacro  robot.gazebo  robot.xacro
in424_msgs/: CMakeLists.txt  package.xml
in424_nav/in424_nav/: agent.py  map_manager.py  my_common.py  tf_publishers.py
in424_simu/: CMakeLists.txt  package.xml
in424_simu/cfg/: config.rviz
in424_simu/launch/: spawn_robots_launch.py  start_world_launch.py
in424_simu/models/box_1_1/: model.sdf
in424_simu/models/box_2_2/: model.sdf
in424_simu/models/box_3_2/: model.sdf
in424_simu/models/small_cube/: model.config  model.sdf
in424_simu/models/walls/: model.sdf
in424_simu/models/walls_2/: model.config  model.sdf
in424_simu/worlds/: env.world
